# receipt-index

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: ci.yml  claude.yml
db/init/: 01-create-roles.sql
db/migrations/public/: 000001_create_set_updated_at_function.down.sql  000001_create_set_updated_at_function.up.sql
db/migrations/receipt/: 000001_create_receipts_table.down.sql  000001_create_receipts_table.up.sql  000002_grant_receipts_access.down.sql  000002_grant_receipts_access.up.sql  000003_create_ingest_log_table.down.sql  000003_create_ingest_log_table.up.sql  000004_grant_ingest_log_access.down.sql  000004_grant_ingest_log_access.up.sql
docs/: README.md
docs/engineering/adr/: 0001-postgresql-for-search-index.md  0002-llm-extraction-via-pydantic-ai.md  0003-local-file-store-with-abstraction.md  0004-pdf-extraction-pdfplumber-plus-vision.md  0004-playwright-for-pdf-rendering.md  0005-playwright-html-to-pdf-rendering.md  0006-config-based-source-definitions.md
docs/engineering/designs/: phase-2-gdrive-and-config.md  receipt-search-index.md
docs/product/features/: receipt-search-index-spec.md
docs/user/: cli-reference.md  getting-started.md  production-setup.md  troubleshooting.md
src/receipt_index/: cli.py  config.py  db.py  extraction.py  models.py  pdf_reader.py  pipeline.py  renderer.py  repository.py  store.py
src/receipt_index/adapters/: base.py  imap.py
tests/: conftest.py
tests/integration/: conftest.py  test_e2e_pipeline.py  test_pdf_extraction.py  test_renderer.py
tests/unit/: test_cli.py  test_config.py  test_extraction.py  test_imap_adapter.py  test_models.py  test_pdf_reader.py  test_pipeline.py  test_renderer.py  test_repository.py  test_store.py
